Fix horizontal overflow on first load

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,11 @@ body,
 #root {
   position: relative;
   width: 100%;
+  max-width: 100vw;
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body {
